@@ -344,6 +344,7 @@ CREATE TABLE sync (
   overdue            INTERVAL    NOT NULL DEFAULT '0 seconds'::interval,
   expired            INTERVAL    NOT NULL DEFAULT '0 seconds'::interval,
   track_rates        BOOLEAN     NOT NULL DEFAULT 'false',
+  onetimecopy        BOOLEAN     NOT NULL DEFAULT 'false',
   cdate              TIMESTAMPTZ NOT NULL DEFAULT now()
 );
 
